fix color dark mode

--- a/src/assets/scss/themes/_darkMode.scss
+++ b/src/assets/scss/themes/_darkMode.scss
@@ -11,6 +11,9 @@
     p {
       color: #1b1b1b !important;
     }
+    span {
+      color: #1b1b1b !important;
+    }
   }
   //HOME PAGE DARK-THEME
   .home-page {
